--- a/index.html
+++ b/index.html
@@ -4,3 +4,16 @@ title: HowIShell
 ---
 
 How I use my shell
+
+<div id="meeting" class="screen">
+  {% include meeting.html %}
+</div>
+
+<div id="send-to-the-moon" class="screen hide">
+{% include send_to_the_moon.html %}
+</div>
+
+
+<div id="moon" class="screen hide">
+{% include moon.html %}
+</div>
