--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
----
-layout: default
-title: HowIShell
----
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Bootstrap 101 Template</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    
+    <script src="js/jquery-2.0.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/handlebars.runtime.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/templates.js"></script>
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
 
-How I use my shell
+  </body>
+</html>
