--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    
+    <link rel="stylesheet" href="css/app.css">
+
     <script src="js/jquery-2.0.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/handlebars.runtime.js"></script>
@@ -14,6 +15,58 @@
     <script src="js/templates.js"></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <div id="meeting" class="row">
+        <div class="span4" style="text-align: center;">
+          <a style="font-size: 200px;" href="#">
+            <i class="icon icon-user"></i>
+          </a>
+        </div>
+        <div class="span4" style="text-align: center;">
+          <a style="font-size: 200px; text-align: center;" href="#">
+            <i class="icon icon-user"></i>
+          </a>
+        </div>
+        <div class="span4" style="text-align: center;">
+          <a style="font-size: 200px; text-align: center;" href="#">
+            <i class="icon icon-user"></i>
+          </a>
+        </div>
+      </div>
+      <div id="buying">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Item</th>
+              <th>Cantidad</th>
+              <th>Costo</th>
+              <th>Sub-total</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <strong>Robot Factory</strong>
+              </td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>
+                <a href="#" class="btn">
+                  <i class="icon icon-plus"></i>
+                </a>
+                <a href="#" class="btn">
+                  <i class="icon icon-minus"></i>
+                </a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div id="moon">
+
+      </div>
+    </div>
   </body>
 </html>
