--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <script src="js/jquery-2.0.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/handlebars.runtime.js"></script>
-    <script src="js/app.js"></script>
     <script src="js/templates.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
     <div class="container">
@@ -64,8 +64,13 @@
           </tbody>
         </table>
       </div>
-      <div id="moon">
+      <div id="moon" class="row">
+        <div class="span3">
 
+        </div>
+        <div id="moon-map" class="span9">
+
+        </div>
       </div>
     </div>
   </body>
