Basic header with resource counts

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
   </head>
   <body>
     <div class="container">
+      <div id="header" class="row">
+        
+      </div>
       <div id="meeting" class="row">
         <div class="span4" style="text-align: center;">
           <a style="font-size: 200px;" href="#">
