Placeholder next button

--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
     <script src="js/app.js"></script>
   </head>
   <body>
+
     <div class="container">
+      <div class="row">
+        <div class="span2 pull-right"><a href="#" id="next-btn" class="btn"> Next <i class="icon icon-arrow-right"></i></a></div>
+      </div>
       <div id="header" class="row">
         
       </div>
-      <div id="meeting" class="row">
+      <div id="screen-meeting" class="row">
         <div class="span4" style="text-align: center;">
           <a style="font-size: 200px;" href="#">
             <i class="icon icon-user"></i>
@@ -36,7 +40,7 @@
           </a>
         </div>
       </div>
-      <div id="buying">
+      <div id="screen-budget">
         <table class="table">
           <thead>
             <tr>
@@ -67,7 +71,7 @@
           </tbody>
         </table>
       </div>
-      <div id="moon" class="row">
+      <div id="screen-moon" class="row">
         <div class="span3">
 
         </div>
