--- a/index.html
+++ b/index.html
@@ -24,21 +24,7 @@
         
       </div>
       <div id="screen-meeting" class="row">
-        <div class="span4" style="text-align: center;">
-          <a style="font-size: 200px;" href="#">
-            <i class="icon icon-user"></i>
-          </a>
-        </div>
-        <div class="span4" style="text-align: center;">
-          <a style="font-size: 200px; text-align: center;" href="#">
-            <i class="icon icon-user"></i>
-          </a>
-        </div>
-        <div class="span4" style="text-align: center;">
-          <a style="font-size: 200px; text-align: center;" href="#">
-            <i class="icon icon-user"></i>
-          </a>
-        </div>
+          <div id="advisors"></div>
       </div>
       <div id="screen-budget">
         <table class="table">
