--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </div>
       <div id="screen-meeting" class="row">
           <div id="advisors"></div>
+          <div id="dialog"></div>
       </div>
       <div id="screen-budget">
         <table class="table">
