--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/handlebars.runtime.js"></script>
     <script src="js/templates.js"></script>
+    <script src="js/jquery.knob.js"></script>
+    <script src="js/knob.extension.js"></script>
     <script src="js/app.js"></script>
   </head>
   <body>
@@ -21,49 +23,53 @@
         <div class="span2 pull-right"><a href="#" id="next-btn" class="btn"> Next <i class="icon icon-arrow-right"></i></a></div>
       </div>
       <div id="header" class="row">
-        
+
       </div>
-      <div id="screen-meeting" class="row">
+      <div id="screens" class="row">
+        <div id="screen-meeting" class="screen row">
           <div id="advisors"></div>
           <div id="dialog"></div>
-      </div>
-      <div id="screen-budget">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Item</th>
-              <th>Cantidad</th>
-              <th>Costo</th>
-              <th>Sub-total</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>
-                <strong>Robot Factory</strong>
-              </td>
-              <td>0</td>
-              <td>0</td>
-              <td>0</td>
-              <td>
-                <a href="#" class="btn">
-                  <i class="icon icon-plus"></i>
-                </a>
-                <a href="#" class="btn">
-                  <i class="icon icon-minus"></i>
-                </a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div id="screen-moon" class="row">
-        <div class="span3">
-
         </div>
-        <div id="moon-map" class="span9">
+        <div id="screen-budget" class="screen hidden-screen">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Item</th>
+                <th>Cantidad</th>
+                <th>Costo</th>
+                <th>Sub-total</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <strong>Robot Factory</strong>
+                </td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>
+                  <a href="#" class="btn">
+                    <i class="icon icon-plus"></i>
+                  </a>
+                  <a href="#" class="btn">
+                    <i class="icon icon-minus"></i>
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div id="screen-moon" class="row screen hidden-screen">
+          <div class="span3">
+            <input class="knob" value="10" data-skin="tron">
+          </div>
+          <div id="area-info"class="modal hide fade">
+          </div>
+          <div id="moon-map" class="span9">
 
+          </div>
         </div>
       </div>
     </div>
