--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div id="header" class="row">
         
       </div>
+      <div class="well">
       <div id="screen-meeting" class="row">
           <div id="advisors"></div>
           <div id="dialog"></div>
@@ -65,6 +66,7 @@
         <div id="moon-map" class="span9">
 
         </div>
+      </div>
       </div>
     </div>
   </body>
