--- a/index.html
+++ b/index.html
@@ -28,46 +28,49 @@
         <div id="screen-meeting" class="screen row">
           <div id="advisors"></div>
           <div id="dialog"></div>
-      </div>
-      <div id="screen-budget">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Item</th>
-              <th>Cantidad</th>
-              <th>Costo</th>
-              <th>Sub-total</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>
-                <strong>Robot Factory</strong>
-              </td>
-              <td>0</td>
-              <td>0</td>
-              <td>0</td>
-              <td>
-                <a href="#" class="btn">
-                  <i class="icon icon-plus"></i>
-                </a>
-                <a href="#" class="btn">
-                  <i class="icon icon-minus"></i>
-                </a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div id="screen-moon" class="row">
-        <div class="span3">
-
         </div>
-          <div id="moon-map" class="span9">
+        <div id="screen-budget">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Item</th>
+                <th>Cantidad</th>
+                <th>Costo</th>
+                <th>Sub-total</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <strong>Robot Factory</strong>
+                </td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>
+                  <a href="#" class="btn">
+                    <i class="icon icon-plus"></i>
+                  </a>
+                  <a href="#" class="btn">
+                    <i class="icon icon-minus"></i>
+                  </a>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div id="screen-moon" class="row">
+          <div id="area-info" class="modal hide fade">
+          </div>
+          <div class="span3">
 
+          </div>
+          <div id="moon-map" class="span9">
+          </div>
         </div>
       </div>
     </div>
   </body>
 </html>
+
