--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <div id="screen-moon" class="row">
           <div id="area-info" class="modal hide fade">
           </div>
-          <div class="span3">
-
+          <div class="span2">
+            <div id="area-stats"></div>
           </div>
           <div id="moon-map" class="span9">
           </div>
