--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/jquery-2.0.0.min.js"></script>
     <script src="js/jquery-ui.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrapSwitch.js"></script>
     <script src="js/handlebars.runtime.js"></script>
     <script src="js/templates.js"></script>
     <script src="js/jquery.knob.js"></script>
