--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrapSwitch.css">
     <link rel="stylesheet" href="css/app.css">
 
     <script src="js/jquery-2.0.0.min.js"></script>
