--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div id="screens" class="well row">
         <div id="screen-meeting" class="screen row">
-            <img src="img/NASA_logo.svg" class="span2">
+            <img draggable="false" src="img/NASA_logo.svg" class="span2">
           </span>
           <div id="advisors"></div>
         </div>
@@ -68,7 +68,7 @@
             <div id="area-stats"></div>
           </div>
           <div id="moon-map" class="span9">
-            <img id="moon-img" src="img/moon.png" style="margin: 26px; width: 648px; height: 575px;">
+            <img id="moon-img" draggable="false" src="img/moon.png" style="margin: 26px; width: 648px; height: 575px;">
             <div id="moon-areas">
             </div>
           </div>
